more css styles

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 
                     <div class="form-group">
                       <label id="monthDay" class="labels">Day of month</label>
-                      <input type="number" placeholder="Enter the day of the month" class="form-control" id="monthday" required min="0" max="12">
+                      <input type="number" placeholder="Enter the day of the month" class="form-control" id="day" required min="0" max="12">
                     </div>
                     
 
                     <form class="radio-button">
-                      <input type="radio" class="genders labels" value="male" id="rad1" name="rads" required>female
+                      <input type="radio" class="genders labels" value="male" id="rad1" name="rads" required >Female
                       <br>
                       <br>
-                      <input type="radio" class="genders labels" value="female" id="rad1" name="rads" required>male
+                      <input type="radio" class="genders labels" value="female" id="rad1" name="rads" required >Male
                     </form>
                     <br>
 
